doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\famil\Google Drive\Joel\Inventure\Grade 10IC\HW\Computer Applications\Joel Tony - 10 ICSE
-d
C:\Users\famil\Google Drive\Joel\Inventure\Grade 10IC\HW\Computer Applications\Joel Tony - 10 ICSE\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\famil\Google Drive\Joel\Inventure\Grade 10IC\HW\Computer Applications\Joel Tony - 10 ICSE\FortySevenObject.java
<---- end of javadoc command ---->
Loading source file C:\Users\famil\Google Drive\Joel\Inventure\Grade 10IC\HW\Computer Applications\Joel Tony - 10 ICSE\FortySevenObject.java...
Constructing Javadoc information...
Standard Doclet version 1.8.0_144
Building tree for all the packages and classes...
Generating C:\Users\famil\Google Drive\Joel\Inventure\Grade 10IC\HW\Computer Applications\Joel Tony - 10 ICSE\doc\FortySevenObject.html...
C:\Users\famil\Google Drive\Joel\Inventure\Grade 10IC\HW\Computer Applications\Joel Tony - 10 ICSE\Project007.java:100: error: illegal start of expression
		if () {
		    ^
Generating C:\Users\famil\Google Drive\Joel\Inventure\Grade 10IC\HW\Computer Applications\Joel Tony - 10 ICSE\doc\package-frame.html...
Generating C:\Users\famil\Google Drive\Joel\Inventure\Grade 10IC\HW\Computer Applications\Joel Tony - 10 ICSE\doc\package-summary.html...
Generating C:\Users\famil\Google Drive\Joel\Inventure\Grade 10IC\HW\Computer Applications\Joel Tony - 10 ICSE\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\famil\Google Drive\Joel\Inventure\Grade 10IC\HW\Computer Applications\Joel Tony - 10 ICSE\doc\allclasses-frame.html...
Generating C:\Users\famil\Google Drive\Joel\Inventure\Grade 10IC\HW\Computer Applications\Joel Tony - 10 ICSE\doc\allclasses-noframe.html...
Generating C:\Users\famil\Google Drive\Joel\Inventure\Grade 10IC\HW\Computer Applications\Joel Tony - 10 ICSE\doc\index.html...
1 error
